[gd_scene load_steps=9 format=3 uid="uid://chewrbnstp7hj"]

[ext_resource type="FontFile" uid="uid://ts63eiltyjcd" path="res://DIOGENES.ttf" id="1_4gpv3"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_84nj2"]
[ext_resource type="Texture2D" uid="uid://n4e5epxqxc1c" path="res://IMG_6811.png" id="2_h71nv"]
[ext_resource type="Texture2D" uid="uid://ron0tbpts5mg" path="res://sign_one_plank.png" id="4_di5lu"]
[ext_resource type="Script" path="res://control.gd" id="4_tlt6b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1w50k"]
texture = ExtResource("2_h71nv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7yndh"]
texture = ExtResource("4_di5lu")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcswa"]
bg_color = Color(0.203922, 0.184314, 0.172549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 7

[node name="Menu" type="Control"]
custom_minimum_size = Vector2(0, 0.035)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = -69.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_84nj2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_1w50k")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -540.0
offset_top = -167.0
offset_right = 598.0
offset_bottom = 340.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.174855, 0.107144, 0.00228675, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_4gpv3")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxTexture_7yndh")
text = "
ACEMAZE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_tlt6b")

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 383.0
offset_top = 222.0
offset_right = 643.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.94902, 0.329412, 0, 1)
theme_override_colors/font_pressed_color = Color(0.862745, 0.709804, 0, 1)
theme_override_colors/font_color = Color(1, 0.890196, 0, 1)
theme_override_fonts/font = ExtResource("1_4gpv3")
theme_override_font_sizes/font_size = 70
theme_override_styles/pressed = SubResource("StyleBoxFlat_pcswa")
text = "PLAY"
icon_alignment = 1

[node name="Options" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 220.0
offset_top = 347.0
offset_right = 452.0
offset_bottom = 449.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.94902, 0.329412, 0, 1)
theme_override_colors/font_pressed_color = Color(0.862745, 0.709804, 0, 1)
theme_override_colors/font_color = Color(1, 0.890196, 0, 1)
theme_override_fonts/font = ExtResource("1_4gpv3")
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_pcswa")
text = "OPTIONS"

[node name="Quit" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 584.0
offset_top = 342.0
offset_right = 803.0
offset_bottom = 451.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0.94902, 0.329412, 0, 1)
theme_override_colors/font_pressed_color = Color(0.862745, 0.709804, 0, 1)
theme_override_colors/font_color = Color(1, 0.890196, 0, 1)
theme_override_fonts/font = ExtResource("1_4gpv3")
theme_override_font_sizes/font_size = 40
theme_override_styles/pressed = SubResource("StyleBoxFlat_pcswa")
text = "QUIT"

[connection signal="pressed" from="Control/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Control/Quit" to="." method="_on_quit_pressed"]
